<resources>
    <string name="app_name">Cookhome</string>
    <string name="title_home">Productos</string>
    <string name="title_dashboard">Ventas</string>
    <string name="title_notifications">Carrito</string>
    <string name="title_activity_login">Cookhome</string>
    <string name="prompt_email_user">Usuario</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_user">Nombre de usuario</string>
    <string name="prompt_phone">Número de teléfono</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_name">Nombre (s)</string>
    <string name="prompt_lastname">Apellido (s)</string>
    <string name="prompt_address">Dirección</string>
    <string name="prompt_city">Ciudad</string>
    <string name="prompt_state">Estado</string>
    <string name="prompt_cp">Código postal</string>
    <string name="prompt_suburb">Colonia</string>
    <string name="prompt_name_card">Nombre de la tarjeta</string>
    <string name="prompt_num_card">Número de tarjeta</string>
    <string name="prompt_date_card">Fecha de tarjeta</string>
    <string name="prompt_cod_card">Código de tarjeta</string>
    <string name="prompt_country">País</string>
    <string name="prompt_name_market">Nombre de la tienda</string>
    <string name="action_sign_on">Crear cuenta</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciando sesión...</string>
    <string name="welcome">"¡Hola! "</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe de contener más de 5 caracteres</string>
    <string name="login_failed">"Error al iniciar sesión"</string>
</resources>