<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper3"
    tools:context=".CompletedRegisterActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="373dp"
        android:layout_height="739dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="757dp"
        android:fontFamily="@font/alatsi"
        android:text="COMPLETA TU REGISTRO"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="164dp"
        android:layout_height="36dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="497dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="358dp"
        android:fontFamily="@font/alatsi"
        android:text="DATOS BANCARIOS"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user10"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="418dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="418dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_suburb"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user5"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="631dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_address"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user2"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="700dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user3"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="700dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_lastname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user4"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="211dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="489dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_cp"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user6"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="211dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="560dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_state"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user7"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="489dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_country"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user9"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="303dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_name_card"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user8"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="560dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_city"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCompletedRegister"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="125dp"
        android:layout_marginTop="748dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="95dp"
        android:background="#EF6D32"
        android:text="Crear cuenta"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="234dp"
        android:backgroundTint="#FDFAFA"
        android:ems="10"
        android:hint="@string/prompt_num_card"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="671dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="163dp"
        android:backgroundTint="#FDFAFA"
        android:ems="10"
        android:hint="@string/prompt_cod_card"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="671dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="163dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_date_card"
        android:inputType="date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>