<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper7"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="329dp"
        android:layout_height="585dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="174dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="182dp"
        android:layout_height="37dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="641dp"
        android:fontFamily="@font/alatsi"
        android:text="cookhome"
        android:textAlignment="viewStart"
        android:textColor="#f08a5d"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="369dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="128dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="598dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/email"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="528dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="449dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_user"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="140dp"
        android:layout_marginTop="641dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="202dp"
        android:background="#EF6D32"
        android:text="@string/action_sign_on"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="545dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="289dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:scrollbarTrackHorizontal="@color/white"
        android:scrollbarTrackVertical="@color/white"
        android:selectAllOnFocus="true"
        android:shadowColor="#FFFFFF"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>