<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="319dp"
        android:layout_height="459dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="129dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="394dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/prompt_email_user"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginTop="339dp"
        android:layout_marginBottom="319dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:scrollbarTrackHorizontal="@color/white"
        android:scrollbarTrackVertical="@color/white"
        android:selectAllOnFocus="true"
        android:shadowColor="#FFFFFF"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="448dp"
        android:layout_marginBottom="245dp"
        android:background="#EF6D32"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="168dp"
        android:background="#EF6D32"
        android:text="Registrate"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="169dp"
        android:lineSpacingExtra="12sp"
        android:text="¿No tienes cuenta?"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="37dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="497dp"
        android:fontFamily="@font/alatsi"
        android:text="cookhome"
        android:textAlignment="viewStart"
        android:textColor="#f08a5d"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="109dp"
        android:layout_height="128dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="452dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <android.support.v7.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="51dp" />

</android.support.constraint.ConstraintLayout>